# healthcare_ml_api

./: README.md  pyproject.toml
app/: main.py  schemas.py
frontend/: index.html
healthcare_ml_api/: LICENSE  README.md  requirements.txt
healthcare_ml_api/data/cleaned/: cleaned.csv
healthcare_ml_api/pipeline/: load_to_db.py
models/: encoders.joblib  model.joblib
pipeline/: main.py  preprocess.py  scheduler.py  train.py
